# organoid-fl

./: .gitignore  Cargo.toml  Dockerfile  README.md  app.py  build.rs  docker-compose.yml  fl_classify_sim.py  fl_detect_sim.py  requirements.txt  requirements_local.txt  run_fl.bat  run_fl.sh  sahi_eval.py  setup_local.bat  test_client.py
.streamlit/: config.toml
analysis/: audit_engine.py  baseline_analyzer.py  detector.py  feature_extractor_v2.py  fl_engine.py  gradcam.py  multi_task_fl.py  segmentor.py  vector_engine.py  vision_rag.py
data/: README.md  __init__.py  crop_patches.py  multiorg_tiling.py  synthetic.py
docs/: cross_domain_plan.md  ensemble_survey.md  experiment_tracker.md  multiorg_sota_survey.md  visual_primitives_plan.md  visual_primitives_plan_v2.md
fl/: README.md  demo.py  demo_phase3.py  feature_extractor.py  features.npz  federated_learning.py  generate_data.py  model_final.pt  training_history.npz
modules/: __init__.py  audit_chain.py  dashboard.py  data_explorer.py  detection.py  explainability.py  feature_space.py  fl_training.py  model_analysis.py  multi_task.py  research.py  segmentation.py  surf_2026.py  vector_search.py  vision_rag.py
presentation/: organoid_fl_progress.tex  organoid_fl_progress_v10.tex  organoid_fl_progress_v11.tex  organoid_fl_progress_v12.tex  organoid_fl_progress_v13.tex  organoid_fl_progress_v15.tex  organoid_fl_progress_v16.tex  organoid_fl_progress_v2.tex  organoid_fl_progress_v3.tex  organoid_fl_progress_v4.tex  organoid_fl_progress_v5.tex  organoid_fl_progress_v6.tex  organoid_fl_progress_v7.tex  (+2 more)
(+309 files in other folders)
